# zboxfs_speedtest

./: .gitignore  Cargo.toml  graph.py
input/: finish_times_append_0.txt  finish_times_append_1.txt  finish_times_append_2.txt  finish_times_append_3.txt  finish_times_append_4.txt  finish_times_append_5.txt  finish_times_append_6.txt  finish_times_append_7.txt  finish_times_write_0.txt  finish_times_write_1.txt  finish_times_write_2.txt  finish_times_write_3.txt  finish_times_write_4.txt  finish_times_write_5.txt  finish_times_write_6.txt  finish_times_write_7.txt  meta_append_0.txt  meta_append_1.txt  meta_append_2.txt  meta_append_3.txt  meta_append_4.txt  meta_append_5.txt  meta_append_6.txt  meta_append_7.txt  meta_write_0.txt  meta_write_1.txt  meta_write_2.txt  meta_write_3.txt  meta_write_4.txt  meta_write_5.txt  meta_write_6.txt  meta_write_7.txt  open_times_append_0.txt  open_times_append_1.txt  open_times_append_2.txt  open_times_append_3.txt  open_times_append_4.txt  open_times_append_5.txt  open_times_append_6.txt  open_times_append_7.txt  (+24 more)
input_test/: finish_times_append_0.txt  finish_times_append_1.txt  finish_times_append_2.txt  finish_times_append_3.txt  finish_times_append_4.txt  finish_times_append_5.txt  finish_times_append_6.txt  finish_times_append_7.txt  finish_times_write_0.txt  finish_times_write_1.txt  finish_times_write_2.txt  finish_times_write_3.txt  finish_times_write_4.txt  finish_times_write_5.txt  finish_times_write_6.txt  finish_times_write_7.txt  meta_append_0.txt  meta_append_1.txt  meta_append_2.txt  meta_append_3.txt  meta_append_4.txt  (+43 more)
(+57 files in other folders)
